crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__function_call_with_multiple_arguments.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: "expr(foo(42, a))"
---
Node(
    FUNCTION_CALL@0..9
      IDENT@0..3 "foo"
      L_PAREN@3..4 "("
      ARGUMENTS@4..8
        INTEGER@4..6 "42"
        COMMA@6..7 ","
        IDENT@7..8 "a"
      R_PAREN@8..9 ")"
    ,
)
