crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__not.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(!true)
---
Node(
    UNARY_EXPR@0..5
      BANG@0..1
        BANG@0..1 "!"
      TRUE_KW@1..5
        TRUE_KW@1..5 "true"
    ,
)
