crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__one_plus_one.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(1+ 1)
---
Node(
    BIN_EXPR@0..3
      INTEGER@0..1 "1"
      PLUS@1..2 "+"
      INTEGER@2..3 "1"
    ,
)
