crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__parens.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr((42))
---
[
    Token(
        L_PAREN@0..1 "(",
    ),
    Token(
        INTEGER@1..3 "42",
    ),
    Token(
        R_PAREN@3..4 ")",
    ),
]
