crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__positive_number.snap
---
source: crates/syntax/src/grammar/expressions.rs
description: expr(+42)
---
Node(
    UNARY_EXPR@0..3
      PLUS@0..1
        PLUS@0..1 "+"
      INTEGER@1..3
        INTEGER@1..3 "42"
    ,
)
