crates/syntax/src/grammar/snapshots/scad_syntax__grammar__expressions__tests__single_number.snap
---
source: crates/syntax/src/grammar/expressions.rs
expression: single
---
Token(
    INTEGER@0..2 "42",
)
